[package]
name = "rp2040-nrf24l01p-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# cortex
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
# defmt
defmt = "0.3"
defmt-serial = "0.6"
# panic
panic-probe = { version = "0.3", features = ["print-defmt"] }
# embassy
embassy-executor = { version = "0.2", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
# embedded hal
embedded-hal = { version = "=1.0.0-alpha.11" }
# static cell
static_cell = { version = "1.1", features = ["nightly"] }
# bitfield
bitfield = "0.14.0"
